cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -maes -msse4.1")
option(DEBUG "whether to debug or jump and use main.cpp" ON)

project (test)

add_executable(${PROJECT_NAME} main.cpp)
find_package(emp-ot)
include_directories(${EMP-OT_INCLUDE_DIRS})
message(${EMP-OT_INCLUDE_DIRS})
find_package(emp-tool)
include_directories(${EMP-TOOL_INCLUDE_DIRS})
find_package(emp-sh2pc)
include_directories(${EMP-SH2PC_INCLUDE_DIRS})
message(${EMP-SH2PC_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} emp-tool)
target_link_libraries(${PROJECT_NAME} ${EMP-OT_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${EMP-SH2PC_LIBRARIES})